# raylib_snake

./: CMakeLists.txt  LICENSE  README.md  main.cpp  snake.h  vcpkg.json
src/: food.cpp  food.h  game.cpp  game.h  snake.cpp  snake.h
